# incremental-compiler

./: .gitignore  README.md  circle.yml  ctest.c  inc-compiler.cabal  runtime.c  scheme_entry.h  stack.yaml
app/: Main.hs
lab/: cons-test.scm  sum-test.scm  test-corec.scm  test-f-app.scm  test-simple-fn.scm  vector-test.scm
src/: .#Emitter.hs  Chars.hs  CodeGen.hs  Desugaring.hs  Emitter.hs  Expr.hs  FixNum.hs  InmediateRepr.hs  Lib.hs  LiteralParser.hs  MagicNumbers.hs  Pairs.hs  Parser.hs  ParserWithPosition.hs  Primitives.hs  Vectors.hs
test/: CompileAndRunSpec.hs  EmitterSpec.hs  ParserSpec.hs  ParserWithPositionSpec.hs  Spec.hs  TestUtils.hs
