name:                inc-compiler
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/miguel-vila/inc-compiler
license:             BSD3
author:              Miguel Vilá
category:            Compiler
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Expr
  other-modules:       Parser, InmediateRepr, MagicNumbers
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , parsec
                     , process
                     , directory >= 1.3
  default-language:    Haskell2010

executable inc-compiler-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , inc-compiler
  default-language:    Haskell2010

test-suite inc-compiler-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , parsec
                     , inc-compiler
                     , mtl
                     , transformers
                     , hspec
                     , HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/miguel-vila/inc-compiler
