name:                inc-compiler
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/miguel-vila/inc-compiler
license:             BSD3
author:              Miguel Vilá
category:            Compiler
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Expr, Emitter, Parser, CodeGen, ParserWithPosition
  other-modules:       InmediateRepr, MagicNumbers, Desugaring, Primitives, Chars, FixNum, Pairs, Vectors, LiteralParser
  build-depends:       base >= 4.7 && < 5
                     , hashmap
                     , mtl
                     , parsec
                     , parsec-numbers
                     , process
                     , directory >= 1.3
                     , deriving-compat
                     , recursion-schemes
                     , free
  default-language:    Haskell2010

executable inc-compiler-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , MissingH
                     , inc-compiler
                     , process
  default-language:    Haskell2010

test-suite inc-compiler-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       CompileAndRunSpec, EmitterSpec, ParserSpec, ParserWithPositionSpec, TestUtils
  build-depends:       base
                     , parsec
                     , inc-compiler
                     , mtl
                     , transformers
                     , recursion-schemes
                     , hspec
                     , HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/miguel-vila/inc-compiler
